	* Added CTRL+G shortcut for Goto measure. Some other similar strings tidied up. Updated translations. R357
	* R370 -- merged branches/code_cleanup 353:369
	* R371 -- Patch #627: Update Qt Collection Class names and #include's, from Henri Manson.
	* R372 -- FIXED: When cycling through elements, new element doesn't inherit any properties from the old one, because of the buttons feedback! The interface is now first cleaned (all the properties buttons are set to off) and then set to new.
	* R373 -- Bug #4444: Noteedit crashes when import from double-byte MIDI filename
	* R374 -- Fix PMX-export of notes in the bass-clef
	* R375, R376: Proof-read some strings in export and configure dialog:
	  - MIDI information line -> Additional MIDI parameters
	  - Letter -> US Letter, Legal -> US Legal
	  - Program executable commands like "gv" or "abcm2ps" in new printing code moved outside of i18n() function.
	  - Rewritten some copy&pasting warning dialogs.
	  - Synchronized translations for the new printing strings.
	  - Updated Slovenian translation.
	* R377 -- Rewrite of the copy&paste beam and tuplet manipulation code:
	  - FIXED: An old bug, when NoteEdit crashed when copying beamed notes under the tuplet.
	  - FIXED: Tuplets and/or beams are now correctly broken when non-complete tuplet and/or beam is copied.
	  - ADDED: Assign beam properties to the cloned notes as well.
	  - REMOVED: NChord::resetBeamFlag(), duplicate of NChord::resetBeamFlags()
	* R380 -- fixed ambiguous argument cast of fabs in miditimescale.cpp